# message-dispatcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-base.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
dispatcher/: factory_app.py  logging_config.py  main.py  schemas.py  settings.py  test_consumer.py  utils.py
dispatcher/core/: security.py
dispatcher/messaging/: lifespan.py  publisher.py  topology.py
dispatcher/routers/: api.py  health.py
